# Tau

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  justfile
.cargo/: audit.toml
.github/: demo-smoke-manifest.json  dependabot.yml  pull_request_template.md
.omx/: metrics.json
.tau/: AGENTS.md  SOUL.md
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: atomic_io.rs  auth_commands.rs  auth_types.rs  cli_args.rs  cli_types.rs  commands.rs  events.rs  extension_manifest.rs  github_issues.rs  main.rs  orchestrator.rs  package_manifest.rs  provider_auth.rs  rpc_capabilities.rs  rpc_protocol.rs  runtime_loop.rs  runtime_types.rs  session.rs  skills.rs  slack.rs  startup_dispatch.rs  startup_local_runtime.rs  startup_preflight.rs  tests.rs  tools.rs  trust_roots.rs
crates/pi-coding-agent/testdata/rpc-schema-compat/: README.md  dispatch-mixed-supported.json  serve-cancel-supported.json  serve-mixed-supported.json
crates/pi-coding-agent/testdata/transport-replay/: github-duplicate-out-of-order.json
crates/pi-coding-agent/tests/: cli_integration.rs
crates/tau-deployment/: Cargo.toml
crates/tau-deployment/src/: deployment_contract.rs  deployment_runtime.rs  deployment_wasm.rs  deployment_wasm_identity.rs  deployment_wasm_runtime.rs  lib.rs
crates/tau-diagnostics/: Cargo.toml
crates/tau-diagnostics/src/: lib.rs
crates/tau-memory/: Cargo.toml
crates/tau-memory/src/: action_history.rs  lib.rs  runtime.rs
crates/tau-memory/src/runtime/: backend.rs  defaults.rs  file_store.rs  normalize.rs  query.rs  ranking.rs  tests.rs  types.rs
crates/tau-memory/src/runtime/tests/: lifecycle.rs  memory_type.rs  relations.rs  search.rs  store.rs
crates/tau-tui/: Cargo.toml
crates/tau-tui/benches/: render_bench.rs
crates/tau-tui/src/: lib.rs  main.rs
crates/tau-tui/src/interactive/: app.rs  app_command_palette_tests.rs  app_commands.rs  app_copy_target.rs  app_detail.rs  app_focus.rs  app_gateway.rs  app_gateway_tests.rs  app_input.rs  app_keys.rs  app_mouse.rs  app_mouse_tests.rs  app_nav.rs  app_runtime.rs  app_submit.rs  build_status.rs  chat.rs  command_catalog.rs  gateway.rs  gateway_client.rs  gateway_runtime.rs  gateway_runtime_tests.rs  gateway_tests.rs  input.rs  mod.rs  operator_state.rs  operator_state_tests.rs  session_state.rs  session_state_tests.rs  status.rs  terminal.rs  tools.rs  transcript_state.rs  transcript_state_tests.rs  ui.rs  ui_activity.rs  ui_body.rs  ui_build_evidence.rs  ui_build_status_tests.rs  ui_chat.rs  (+21 more)
crates/tau-tui/src/interactive/ui_tests/: approval.rs  composer.rs  detail.rs  detail_overlay.rs  evidence.rs  helpers.rs  palette.rs  transcript.rs
crates/tau-tui/tests/: tui_demo_smoke.rs
docs/: AGENT_IMPROVEMENTS_PLAN.md  README.md
examples/: README.md  events-state.json
scripts/: demo-smoke.sh
skills/: example-unified-skill.md  web-game-phaser.md
specs/: 3570-memory-distill-cortex-visibility.md  3581-shared-operator-turn-task-state-protocol.md  3582-runtime-timeout-cancel-partial-output-recovery.md  3582-tui-transcript-first-operator-terminal.md  3583-tui-transcript-first-operator-terminal.md  3584-webchat-production-operator-console.md  3585-codex-auth-model-compatibility-and-tui-startup.md  3586-tool-call-promotion-disk-write.md  3588-roadmap-status-docs-freshness.md  3592-tui-tool-visibility.md  (+15 more)
(+2341 files in other folders)
