[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
pi-agent-core = { path = "../pi-agent-core" }
pi-ai = { path = "../pi-ai" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
predicates = "3"
tempfile = "3"
