[package]
name = "tau-deployment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
kamn-sdk = { path = "../kamn-sdk" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-contract = { path = "../tau-contract" }
tau-core = { path = "../tau-core" }
wasmparser.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
tau-cli = { path = "../tau-cli" }
tau-runtime = { path = "../tau-runtime" }
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
