[package]
name = "tau-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "render_bench"
harness = false
